analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: analytics
  name: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: analytics
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/appnetwork: "true"
        io.kompose.service: analytics
    spec:
      containers:
        - image: ijazhussain/analytics
          name: analytics
          ports:
            - containerPort: 8090
          resources: {}
      restartPolicy: Always
status: {}
