auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: auth
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/appnetwork: "true"
        io.kompose.service: auth
    spec:
      containers:
        - image: ijazhussain/auth
          name: auth
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
