enter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: enter
  name: enter
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: enter
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/appnetwork: "true"
        io.kompose.service: enter
    spec:
      containers:
        - image: ijazhussain/enter
          name: enter
          ports:
            - containerPort: 8100
          resources: {}
      restartPolicy: Always
status: {}
