show-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: show
  name: show
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: show
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/appnetwork: "true"
        io.kompose.service: show
    spec:
      containers:
        - image: ijazhussain/show
          name: show
          ports:
            - containerPort: 8200
          resources: {}
      restartPolicy: Always
status: {}
