enter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: enter
  name: enter
spec:
  type: NodePort
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
      nodePort: 30100
  selector:
    io.kompose.service: enter
