mongo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-db
  name: mongo-db
spec:
  type: NodePort
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
      nodePort: 30017
  selector:
    io.kompose.service: mongo-db
