show-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: show
  name: show
spec:
  type: NodePort
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
      nodePort: 30200
  selector:
    io.kompose.service: show
